--- a/src/majid.html
+++ b/src/majid.html
@@ -41,7 +41,7 @@
                 <p><i class="fa-solid text-[22px] fa-glasses"></i> <span>Версия для слабовидящих</span></p>
                 <button class="px-6 hidden lg:block font-semibold rounded-md py-4 bg-[#00578A] text-[#E3EFF5]">Запись на приём</button>
             </div>
-        </article><br>
+        </article></nav><br>
         <section class="bg-gradient-to-r from-[#00BAC6] to-[#0074B8] h-[760px]">
             <article class=" flex flex-col gap-5 p-5 lg:flex lg:flex-row ">
                 <div class="w-[50] flex flex-col lg:pt-[250px] gap-8">
@@ -113,167 +113,7 @@
         </article>
         </section>
         <br><br><br>
-        <section class="lg:mt-[240px] mt-[1280px] bg-gradient-to-r from-[#02B0C5] to-[#0074B8] rounded-lg p-5">
-            <div class="text-white lg:flex lg:justify-between items-center">
-                <h2 class="text-[34px] lg:text-[48px]">Записаться на приём</h2>
-                <p class="text-[20px]">Оставьте заявку и мы свяжемся с вами в ближайшее время</p>
-            </div>
-            <article class="p-5">
-                <div class="lg:flex lg:flex-row flex flex-col gap-2 lg:gap-2 lg:items-center">
-                    <div class="w-full max-w-sm space-y-2">
-                        <div class="border rounded-lg bg-white">
-                            <input type="checkbox" id="accordion1" class="hidden peer">
-                            <label for="accordion1" class="w-full p-4 text-left font-semibold flex justify-between cursor-pointer">
-                                Выберете направление
-                                <i class="fa-solid fa-chevron-down"></i>
-                            </label>
-                            <div class="hidden peer-checked:block p-4 border-t text-gray-600">
-                                Акушерство <br>
-                                Косметология <br>
-                                Хирургия <br>
-                                Мануальная терапия <br>
-                                Психотерапия
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <input type="text" placeholder="Ваше Имя" class="px-6 lg:w-[400px] rounded-md py-4 border">
-                    </div>
-                    <div><button class="px-6 py-4 bg-[#00C6BF] rounded-md text-white font-semibold">Оставить заявку</button></div>
-                </div> <br>
-                <div class="lg:flex lg:flex-row flex flex-col gap-2 lg:gap-2 lg:items-center">
-                    <div class="w-full max-w-sm space-y-2 ">
-                        <div class="border rounded-lg bg-white">
-                            <input type="checkbox" id="accordion2" class="hidden peer">
-                            <label for="accordion2" class="w-full p-4 text-left font-semibold flex justify-between cursor-pointer">
-                                Выберете врача
-                                <i class="fa-solid fa-chevron-down"></i>
-                            </label>
-                            <div class="hidden peer-checked:block p-4 border-t text-gray-600">
-                                Стоматолог <br>
-                                Эндокринолог <br>
-                                Хирург <br>
-                                Терапевт <br>
-                                Невролог
-                            </div>
-                        </div>
-                    </div>
-                    <div class="">
-                        <input type="number" placeholder="Ваш телефон" class="px-6 lg:w-[400px] rounded-md py-4 border">
-                    </div>
-                    <div class="mt-6 flex items-start text-white text-sm">
-                        <input type="checkbox" id="kunti" class="w-5 h-5 border-2 border-white rounded-md focus:ring-2 focus:ring-white cursor-pointer">
-                        <label for="kunti" class="ml-3">
-                            Отправляя заявку, вы соглашаетесь на нашу 
-                            <a href="#" class="underline">политику конфиденциальности</a>
-                        </label>
-                    </div>
-                </div>
-            </article>
-        </section>
-        <br><br><br>
-        <section class="lg:flex lg:justify-between lg:items-center p-5">
-            <div class="lg:w-[40%]">
-                <h2 class="lg:text-[48px] text-[30px] font-semibold">
-                    Немного о нашем медицинском центре
-                </h2> <br>
-                <p class="text-[18px]">Многопрофильное амбулаторно-поликлиническое учреждение для детей и взрослых в городе Мытищи. Мы предоставляем платные медицинские услуги и занимаем лидирующие позиции среди медицинских учреждений города Мытищи. У нас ежегодно обслуживаются более 150000 пациентов.</p>
-            </div>
-            <img src="./imgmajid/image (6).svg" class="hidden lg:block " alt="">
-        </section>
-        <section class="bg-[#F0F6F9] p-5 lg:flex lg:items-center space-y-2 lg:justify-around">
-            <div class="flex flex-col items-center lg:items-start gap-2">
-                <img src="./imgmajid/cross.svg" class="w-[60px]" alt="">
-                <p class="text-[#017CC1] text-[24px]">>10</p>
-                <p>лет заботы о вашем <br> здоровье</p>
-            </div>
-            <div class="flex flex-col items-center lg:items-start gap-2">
-                <img src="./imgmajid/cross.svg" class="w-[60px]" alt="">
-                <p class="text-[#017CC1] text-[24px]">>150</p>
-                <p>квалифицированных <br> специалистов</p>
-            </div>
-            <div class="flex flex-col items-center lg:items-start gap-2">
-                <img src="./imgmajid/cross.svg" class="w-[60px]" alt="">
-                <p class="text-[#017CC1] text-[24px]">>3000</p>
-                <p>медицинских услуг <br> по всем направлениям</p>
-            </div>
-            <div class="flex flex-col items-center lg:items-start gap-2">
-                <img src="./imgmajid/cross.svg" class="w-[60px]" alt="">
-                <p class="text-[#017CC1] text-[24px]">День в день</p>
-                <p>прием врача любой <br> специальности в день обращения</p>
-            </div>
-        </section>
-        <br><br><br>
-        <section class="p-5">
-            <div class="lg:flex lg:justify-between lg:items-center">
-                <h2 class="lg:text-[48px] text-[28px] font-semibold">Популярные услуги</h2>
-                <div class="flex gap-1">
-                    <i class="fa-solid fa-chevron-left bg-[#EAF6FF] text-[22px] px-3 py-2 rounded-full"></i>
-                    <i class="fa-solid fa-chevron-right bg-[#017CC1] text-white text-[22px] px-3 py-2 rounded-full"></i>
-                </div>
-            </div><br>
-            <article class="lg:flex lg:justify-between lg:items-center flex flex-col lg:flex-row ">
-               <div class="w-[290px] bg-[#F0F6F9]  ">
-                <img src="./imgmajid/image (7).svg" alt="">
-                <div class="bg-[#F0F6F9] p-4 flex flex-col gap-4 rounded-b-md">
-                    <p>Магнитно-резонансная томография (МРТ)</p>
-                    <button class="bg-[#00578A] text-white px-10 py-3 rounded-md">Записаться</button>
-                </div>
-               </div>
-               <div class="w-[290px] bg-[#F0F6F9] hidden lg:block ">
-                <img src="./imgmajid/image (8).svg" alt="">
-                <div class="bg-[#F0F6F9] p-4 flex flex-col gap-4 rounded-b-md">
-                    <p>Гастроскопия</p>
-                    <button class="bg-[#00578A] text-white px-10 py-3 rounded-md">Записаться</button>
-                </div>
-               </div>
-               <div class="w-[290px] bg-[#F0F6F9] hidden lg:block rounded-b-md">
-                <img src="./imgmajid/image (9).svg" alt="">
-                <div class="bg-[#F0F6F9] p-4 flex flex-col gap-4 rounded-b-md ">
-                    <p>Прием гинеколога</p>
-                    <button class="bg-[#00578A] text-white px-10 py-3 rounded-md">Записаться</button>
-                </div>
-               </div>
-               <div class="w-[290px] bg-[#F0F6F9] hidden lg:block   ">
-                <img src="./imgmajid/image (10).svg" alt="">
-                <div class="bg-[#F0F6F9] p-4 flex flex-col gap-4 rounded-b-md ">
-                    <p>Лабораторная диагностика</p>
-                    <button class="bg-[#00578A] text-white px-10 py-3 rounded-md">Записаться</button>
-                </div>
-               </div>
-            </article>
-        </section>
-        <br><br><br>
-        <section>
-            <h1 class="text-[34px] lg:text-[48px] font-semibold">Акции</h1><br>
-            <article class="flex gap-5">
-                <div class="bg-gradient-to-r from-[#00BAC6] to-[#0074B8] rounded-2xl  flex justify-between lg:w-[55%]">
-                    <div class="p-5 flex flex-col gap-[280px]">
-                        <span class="bg-[#65EAE5] px-2 py-2 text-[14px] rounded-lg">до 30 сентября 2023</span>
-                        <div>
-                            <p class="text-[30px] text-white">
-                                -20%
-                            </p>
-                            <p class="text-white">на биоревитацию Hualuform</p>
-                        </div>
-                    </div>
-                    <img src="./imgmajid/image (7).png" class="w-[50%] h-[50%] self-center lg:w-[100%] lg:h-[100%]" alt="">
-                </div>
-                <div class="bg-gradient-to-r hidden  from-[#00BAC6] to-[#0074B8] rounded-2xl  lg:flex lg:justify-between lg:w-[45%]">
-                    <div class="p-5 flex flex-col gap-[280px]">
-                        <span class="bg-[#65EAE5] px-1 py-1 text-[14px] rounded-lg">до 30 сентября 2023</span>
-                        <div>
-                            <p class="text-[30px] text-white">
-                                -20%
-                            </p>
-                            <p class="text-white">на биоревитацию Hualuform</p>
-                        </div>
-                    </div>
-                    <img src="./imgmajid/image (7).png" class="lg:w-[60%] " alt="">
-                </div>
-            </article>
-        </section>
-        
+
 </body>
 </html>
 <!-- npx tailwindcss -i ./src/input.css -o ./src/output.css --watch -->
