--- a/src/majid.html
+++ b/src/majid.html
@@ -30,7 +30,7 @@
             <ul class="hidden lg:flex gap-8">
                 <li><a href="./majid.html" class="text-black font-semibold hover:text-[#00C6BF]">Направления <i class="fa-solid fa-angle-down"></i></a></li>
                 <li><a href="./muslim.html" class="text-black font-semibold hover:text-[#00C6BF]">Услуги</a></li>
-                <li><a href="#" class="text-black font-semibold hover:text-[#00C6BF]">Врачи</a></li>
+                <li><a href="./fahim.html" class="text-black font-semibold hover:text-[#00C6BF]">Врачи</a></li>
                 <li><a href="./umar.html" class="text-black font-semibold hover:text-[#00C6BF]">Отзывы</a></li>
                 <li><a href="#" class="text-black font-semibold hover:text-[#00C6BF]">Акции</a></li>
                 <li><a href="#" class="text-black font-semibold hover:text-[#00C6BF]">О центре <i class="fa-solid fa-angle-down"></i></a></li>
