--- a/src/muslim.html
+++ b/src/muslim.html
@@ -59,7 +59,7 @@
 
         <section class="flex flex-col lg:flex-row gap-5 justify-between px-[2%]">
 
-            <article class="flex flex-col rounded-md gap-5 p-5 bg-[#F0F6F9] lg:w-[32%]">
+            <article class="flex flex-col rounded-md gap-5 p-5 bg-[#F0F6F9] lg:w-[350px]">
                 <h4>Направления</h4>
                 <hr>
                 <p>Акушерство</p>
@@ -69,7 +69,7 @@
                 <p>Психотерапия</p>
                 <button class="py-3 mt-5 bg-[#00578A] text-white rounded-md">Все услуги</button>
             </article>
-            <article class="flex flex-col rounded-md gap-5 p-5 bg-[#F0F6F9] lg:w-[32%]">
+            <article class="flex flex-col rounded-md gap-5 p-5 bg-[#F0F6F9] lg:w-[350px]">
                 <h4>Диагностика</h4>
                 <hr>
                 <p>МРТ</p>
@@ -79,7 +79,7 @@
                 <p>Гастроскопия</p>
                 <button class="py-3 mt-5 bg-[#00578A] text-white rounded-md">Все услуги</button>
             </article>
-            <article class="flex flex-col rounded-md gap-5 p-5 bg-[#F0F6F9] lg:w-[32%]">
+            <article class="flex flex-col rounded-md gap-5 p-5 bg-[#F0F6F9] lg:w-[350px]">
                 <h4>Детство</h4>
                 <hr>
                 <p>Педиатр</p>
