--- a/src/fahim.html
+++ b/src/fahim.html
@@ -40,10 +40,10 @@
     </div>
     <div class="hidden sm:flex justify-around mt-[25px] items-center">
         <div class="flex gap-[30px]">
-        <select class="text-[#141414] font-bold " name="" id=""><option value="">Направления</option></select>
-        <p class="text-[#141414] font-bold ">Услуги</p>
+       <a href="./majid.html"> <select class="text-[#141414] font-bold " name="" id=""><option value="">Направления</option></select></a>
+       <a href="./muslim.html"> <p class="text-[#141414] font-bold ">Услуги</p></a>
         <p class="text-[#141414] font-bold ">Врачи</p>
-        <p class="text-[#141414] font-bold ">Отзывы</p>
+       <a href="./umar.html"> <p class="text-[#141414] font-bold ">Отзывы</p></a>
         <p class="text-[#141414] font-bold ">Акции</p>
         <select class="text-[#141414] font-bold " name="" id=""><option value="">О центре</option></select>
         <p class="text-[#141414] font-bold ">Детство</p>
