--- a/src/umar.html
+++ b/src/umar.html
@@ -209,7 +209,7 @@
 
 
 
-        <div class=" hidden xl:grid xl:grid-cols-2 grid-rows-2  gap-[30px]  ">
+        <div class=" hidden xl:grid xl:grid-cols-2   gap-[30px]  ">
             <section
                 class="relative bg-gradient-to-r from-[#F0F6F9] to-black/10 rounded-xl  flex flex-col gap-[100px]  py-[10px] pl-[30px]">
 
